--- a/ui/src/i18n/de.json
+++ b/ui/src/i18n/de.json
@@ -145,6 +145,9 @@
     "status.uptime.label_hours": "Std",
     "status.uptime.label_minutes": "Minuten",
     "status.uptime.title_uptime": "Betriebszeit",
+    "status.teamviewer.title": "TeamViewer",
+    "status.teamviewer.id": "TeamViewer ID",
+    "status.teamviewer.state": "TeamViewer state",
     "toast.title_error": "Fehler",
     "toast.title_success": "Erfolgreich Durchgeführt",
     "toast.title_warning": "Warnung",
