--- a/ui/src/i18n/fr.json
+++ b/ui/src/i18n/fr.json
@@ -145,6 +145,9 @@
     "status.uptime.label_hours": "Heures",
     "status.uptime.label_minutes": "Minutes",
     "status.uptime.title_uptime": "Uptime",
+    "status.teamviewer.title": "TeamViewer",
+    "status.teamviewer.id": "TeamViewer ID",
+    "status.teamviewer.state": "TeamViewer state",
     "toast.title_error": "Erreur",
     "toast.title_success": "Succès",
     "toast.title_warning": "Attention",
